--- a/Taschenrechner/.classpath
+++ b/Taschenrechner/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="//OS-DC01/RedirectedFolders$/Ebene1/Profiles/nicolas.burgunder/Downloads/json-20180813.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
